# cinnabar-examples

./: Cargo.toml  Makefile  README.md
calculator/: Cargo.toml
calculator/examples/: open.rs  purchase.rs
calculator/src/: calculator.rs  config.rs  lib.rs  operation.rs
contracts/dao-certificate-check-lock/: Cargo.toml  README.md
contracts/dao-certificate-check-lock/src/: hardcoded.rs  main.rs
contracts/dao-certificate-type/: Cargo.toml  README.md
contracts/dao-certificate-type/src/: generated.rs  hardcoded.rs  main.rs
deployment/testnet/: blind-box-type.json  dao-certificate-check-lock.json  dao-certificate-type.json
tests/: Cargo.toml
tests/binaries/: cluster  lock-proxy  spore  type-burn
tests/src/: tests.rs
