[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "calculator",
  "tests",
  "contracts/dao-certificate-type",
  "contracts/dao-certificate-check-lock",
]

[workspace.dependencies]
ckb-cinnabar = {git = "https://github.com/ashuralyk/ckb-cinnabar"}
ckb-cinnabar-verifier = {git = "https://github.com/ashuralyk/ckb-cinnabar"}

[package]
edition = "2021"
name = "runner"
version = "0.1.0"

[dependencies]
ckb-cinnabar = {workspace = true}

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
overflow-checks = true
strip = true
