[package]
name = "dao-certificate-type"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2b-ref = "0.3.1"
ckb-std = "0.15.3"
molecule = { version = "0.7.5", default-features = false }

ckb-cinnabar-verifier = { workspace = true }

[features]
default = ["mainnet"]
mainnet = []
testnet = []
unitest = []
